# pdf-rag

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBox.tsx  Spinner.tsx
frontend/src/context/: IngestContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: AuthorDetail.tsx  GraphExplorer.tsx  IngestUI.tsx  PaperBrowser.tsx  Search.tsx  Settings.tsx  TopicDetail.tsx  TopicMap.tsx
frontend/src/utils/: cyDragNeighbours.ts  cyStylesheet.ts
scripts/: fix_titles.py
src/pdf_rag/: arxiv.py  cli.py  config.py  llm.py  pipeline.py  retriever.py
src/pdf_rag/extraction/: citations.py  entities.py  normaliser.py
src/pdf_rag/graph/: schema.py  store.py
src/pdf_rag/ingestion/: chunker.py  embedder.py  parser.py
src/pdf_rag/server/: main.py
src/pdf_rag/server/routers/: admin.py  arxiv.py  graph.py  ingest.py  search.py
src/pdf_rag/server/static/: index.html
src/pdf_rag/server/static/assets/: index-58Mtm5z9.js  index-B6TQU1E0.js  index-BHwRNWJ4.js  index-BTh1dfWe.js  (+44 more)
tests/: conftest.py  test_arxiv.py  test_llm.py  test_pipeline.py  test_retriever.py
tests/extraction/: test_citations.py  test_entities.py  test_normaliser.py
tests/graph/: test_schema.py  test_store.py  test_traversal.py  test_vector_search.py
tests/ingestion/: test_chunker.py  test_embedder.py  test_parser.py
tests/server/: test_arxiv_api.py  test_graph_api.py  test_search_api.py  test_server_setup.py
