[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "docling",
    "sentence-transformers",
    "kuzu",
    "gliner",
    "rapidfuzz",
    "typer",
    "anthropic",
    "rich",
]

[project.scripts]
pdf-rag = "pdf_rag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_rag"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pdf_rag --cov-report=term-missing"
