[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-rag"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
dependencies = [
  "docling",
  "sentence-transformers",
  "kuzu",
  "gliner",
  "rapidfuzz",
  "typer",
  "anthropic",
  "httpx",
  "rich",
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
]

[project.scripts]
pdf-rag = "pdf_rag.cli:app"
pdf-rag-serve = "pdf_rag.server.main:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_rag"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pdf_rag --cov-report=term-missing"
asyncio_mode = "auto"
